@@ -5,6 +5,7 @@ import org.alfresco.repo.security.authentication.AuthenticationUtil;
 import org.alfresco.repo.security.authentication.AuthenticationUtil.RunAsWork;
 import org.apache.log4j.Logger;
 import org.edu_sharing.repository.server.importer.ImportCleanerIdentifiersList;
+import org.edu_sharing.repository.server.importer.OAIPMHLOMImporter;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 
@@ -18,23 +19,16 @@ import org.quartz.JobExecutionException;
  */
 public class RemoveDeletedImportsFromSetJob extends AbstractJob {
 
-	
-	public static final String PARAM_URL = "URL";
-	
-	public static final String PARAM_SET = "SET";
-	
-	public static final String PARAM_METADATAPREFIX = "METADATA_PREFIX";
-	
 	public static final String PARAM_TESTMODE = "TESTMODE";
-	
+
 	Logger logger = Logger.getLogger(RemoveDeletedImportsFromSetJob.class);
 	
 	@Override
 	public void execute(JobExecutionContext context) throws JobExecutionException {
 		
-		String url = (String)context.getJobDetail().getJobDataMap().get(PARAM_URL);
-		String set = (String)context.getJobDetail().getJobDataMap().get(PARAM_SET);
-		String metadataPrefix = (String)context.getJobDetail().getJobDataMap().get(PARAM_METADATAPREFIX);
+		String url = (String)context.getJobDetail().getJobDataMap().get(OAIConst.PARAM_OAI_BASE_URL);
+		String setsParam = (String)context.getJobDetail().getJobDataMap().get(OAIConst.PARAM_OAI_SETS);
+		String metadataPrefix = (String)context.getJobDetail().getJobDataMap().get(OAIConst.PARAM_OAI_METADATA_PREFIX);
 		String testModeP = (String)context.getJobDetail().getJobDataMap().get(PARAM_TESTMODE);
 		
 		
@@ -42,22 +36,25 @@ public class RemoveDeletedImportsFromSetJob extends AbstractJob {
 			@Override
 			public Void doWork() throws Exception {
 				if(url == null) {
-					logger.error("missing param " + PARAM_URL);
+					logger.error("missing param " + OAIConst.PARAM_OAI_BASE_URL);
 					return null;
 				}
 				
-				if(set == null) {
-					logger.error("missing param " + PARAM_SET);
+				if(setsParam == null) {
+					logger.error("missing param " + OAIConst.PARAM_OAI_SETS);
 					return null;
 				}
 				
 				if(metadataPrefix == null) {
-					logger.error("missing param " + PARAM_METADATAPREFIX);
+					logger.error("missing param " + OAIConst.PARAM_OAI_METADATA_PREFIX);
 					return null;
 				}
 				
-				Boolean testMode = (testModeP == null) ? new Boolean("true") : new Boolean(testModeP);
-				new ImportCleanerIdentifiersList(url, set, metadataPrefix, testMode);
+				Boolean testMode = (testModeP == null) ? true : Boolean.valueOf(testModeP);
+				String[] sets = setsParam.split(",");
+				for(String set : sets){
+					new ImportCleanerIdentifiersList(url, set.trim(), metadataPrefix, testMode);
+				}
 				return null;
 			}
 		};
